# code-review-exercise-python

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  LICENSE  Makefile  README.md  app.py  catalog-info.yaml  pyproject.toml
.github/actions/poetryinstall/: action.yaml
.github/workflows/: cicd.yaml
npm_deps/: error.py  models.py  package.py  package_request.py  package_version.py
tests/e2e/: test_app.py
tests/integration/: test_get_package_version.py
tests/integration/fixtures/: package_name_a_test_dependency_of_package_a.json  package_name_a_with_dependencies.json  package_name_aaa_no_dependencies.json
tests/unit/: test_package.py  test_package_request.py
